--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta
-    name="Dot"
-    content="A Dot é uma empresa especializada em desenvolvimento de aplicações web."
-  />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Dot</title>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%PUBLIC_URL%/logo.ico" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#000000" />
+	<meta name="Dot" content="A Dot é uma empresa especializada em desenvolvimento de aplicações web." />
+	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+	<title>Dot</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+	<noscript>You need to enable JavaScript to run this app.</noscript>
+	<div id="root"></div>
 </body>
 </html>
