--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,20 @@
 	<meta name="theme-color" content="#000000" />
 	<meta name="Dot" content="A Dot é uma empresa especializada em desenvolvimento de aplicações web." />
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-	<title>Dot</title>
+	<title>DOT</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+	<meta name="title" content="DOT - Agência Digital">
+	<meta name="description" content="A DOT é uma Agência Digital focada em oferecer serviços de criação de sites para empresas que buscam melhorar sua visibilidade na internet.">
+	<meta name="keywords" content="Agência Digital, Sites, Criação de site, site">
+	<meta name="robots" content="index, follow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="language" content="Portuguese">
+	<meta name="revisit-after" content="1 days">
 </head>
 <body>
-	<noscript>You need to enable JavaScript to run this app.</noscript>
+	<noscript>Você deve ativar o Javascript para poder visualizar este site.</noscript>
 	<div id="root"></div>
 </body>
 </html>
