--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,8 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%PUBLIC_URL%/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="theme-color" content="#000000" />
-	<meta name="Dot" content="A Dot é uma empresa especializada em desenvolvimento de aplicações web." />
+	<link rel="icon" href="%PUBLIC_URL%/logo.ico" />
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	<title>DOT</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +11,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<meta name="title" content="DOT - Agência Digital">
 	<meta name="description" content="A DOT é uma Agência Digital focada em oferecer serviços de criação de sites para empresas que buscam melhorar sua visibilidade na internet.">
+	<meta name="theme-color" content="#8257e5" />
+	<meta property="og:image" content=”https://www.dot-up.com.br/static/media/logo.f8783cd3ff0f3345fccaa073ca734f62.svg” />
 	<meta name="keywords" content="Agência Digital, Sites, Criação de site, site">
 	<meta name="robots" content="index, follow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
