--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 	<meta name="title" content="DOT - Agência Digital">
 	<meta name="description" content="A DOT é uma Agência Digital focada em oferecer serviços de criação de sites para empresas que buscam melhorar sua visibilidade na internet.">
 	<meta name="theme-color" content="#8257e5" />
-	<meta property="og:image" content=”https://www.dot-up.com.br/static/media/logo.f8783cd3ff0f3345fccaa073ca734f62.svg” />
+	<meta property="og:image" content=”https://media.discordapp.net/attachments/814676420742742066/1001594675200806982/logo.png” />
 	<meta name="keywords" content="Agência Digital, Sites, Criação de site, site">
 	<meta name="robots" content="index, follow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
